--- a/package.json
+++ b/package.json
@@ -34,5 +34,6 @@
     "vite": "^4.0.4",
     "vitest": "^0.26.3"
   },
-  "type": "module"
+  "type": "module",
+  "packageManager": "pnpm@7.23.0"
 }
